# limit_order_engine

./: CMakeLists.txt  install_dependencies.sh  main  requirements.md
src/: .env  main.cpp
src/blockchain/: curve_pool.cpp  curve_pool.h  rpc_client.cpp  rpc_client.h  wallet.cpp  wallet.h
src/config/: settings.cpp  settings.h
src/engine/: order_executor.cpp  order_executor.h
src/orders/: order.cpp  order.h  slippage.cpp  slippage.h  tif_policies.cpp  tif_policies.h
src/utils/: eth_utils.cpp  eth_utils.h  keccak_wrapper.cpp  keccak_wrapper.h  logger.cpp  logger.h  price_feed.cpp  price_feed.h  rlp_encoder.h  sign_utils.cpp  sign_utils.h
tests/: test_tif_policies.cpp
